@@ -100,11 +100,11 @@ SEE ALSO
         Install the Error::Pure modules.
 
 AUTHOR
-     Michal Špaček L<skim@cpan.org>
+     Michal Josef Špaček L<skim@cpan.org>
      http://skim.cz
 
 LICENSE AND COPYRIGHT
-     © 2011-2015 Michal Špaček
+     © 2011-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
