@@ -1,5 +1,6 @@
 0.05
  - Update Module::Install to 1.19 version.
+ - Update author name.
 
 0.04 2015-09-16T21:14:20+02:00
  - Add 'readme_from' directive to Makefile.PL.
